# pauli-comic-funnel

./: .dockerignore  .env  .env.example  .gitignore  .railwayignore  A2UI_INTEGRATION_GUIDE.md  AGI_OPEN_INTEGRATION.md  BYTEROVER_CONNECTION_STATUS.md  CLI_DEPLOYMENT_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  Dockerfile  INTEGRATION_SUMMARY.md  LIBRECHAT_SETUP.md  PAULI_SYSTEM_MEMORY.md  PHASE_EXECUTION_TRACKER.md  RAILWAY_QUICK_SETUP.md  README.md  SESSION_DELIVERY_SUMMARY.md  UV_INTEGRATION_GUIDE.md  UV_INTEGRATION_IMPLEMENTATION.md  UV_QUICK_START.md  index.html  package-lock.json  package.json  pyproject.toml  railway.json  setup-uv.bat  setup-uv.sh  tailwind.config.ts
.claude/: mcp.json
.claude/skills/: pauli-agent-ui.md
.github/workflows/: deploy.yml  python-uv-cache.yml
00-SYSTEM/: BUILD-REPORT-001.md  INIT-RECONNAISSANCE-REPORT.md  README.md  VERIFICATION-RESPONSE-001.json
00_SYSTEM/: BYTEROVER_CONFIG.yml  CLAUDE_CODE_DIRECTIVES.xml  NOTION_SCHEMA.json  PAULI_ARCHITECTURE.md  pauli_parse_unstructured.py
00_SYSTEM/algorithms/: quicksort.js
01-SECOND-BRAIN/: README.md
02-NOTION-SYNC/: README.md
03-CLOUD-SKILLS/: README.md
04-APPS/: README.md
05-AGENTS/: README.md
05-AGENTS/adversarial-review/: coder-agent.ts  review-loop.ts  validator-agent.ts
05-AGENTS/pauli-prime/: approval-gates.ts  orchestrator.ts  pass-framework.ts  skill-router.ts
06-MCP-SERVERS/: README.md
07-INFRASTRUCTURE/: README.md
08-DOCS/: README.md
09-ASSETS/: README.md
10-WORKFLOWS/: README.md
JARVIS_Universal_Agent_v2.0/: JARVIS_UNIVERSAL_AGENT_LAYER.xml  PACKAGE_SUMMARY.md  README.md  jarvis_agent.py  jarvis_config.json  pyproject.toml  requirements.txt  setup.sh
_JCP/: SIGN_OFF.md  features.json  progress.md  recovery.md
agents/: README.md  index.ts  intelligent_model_router.py  types.ts
agents/agents/CREW AI WORKFLOWS/Awesome-AI-Agents-HUB-for-CrewAI-main/Awesome-AI-Agents-HUB-for-CrewAI-main/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html
agents/agents/CREW AI WORKFLOWS/Awesome-AI-Agents-HUB-for-CrewAI-main/Awesome-AI-Agents-HUB-for-CrewAI-main/health_and_fittness_planner/: .env.example  README.md  pyproject.toml
agents/agents/CREW AI WORKFLOWS/awesome-crewai-main/awesome-crewai-main/: README.md
agents/agents/a2a/: README.md  router.ts
agents/agents/a2a/adapters/: index.ts  nats.ts  redis.ts
agents/agents/a2a/schemas/: envelope.schema.json
agents/agents/browserops/: manifest.ts
agents/agents/crm/: manifest.ts
agents/agents/designer/: manifest.ts
agents/agents/devops/: manifest.ts
agents/agents/lemon/: manifest.ts
agents/custom_handlers/: __init__.py  lux_handler.py
agents/pauli_lightning/: .env.example  __init__.py  agents.py  core.py  pauli.py  requirements.txt  router.py
agents/researcher/: manifest.ts
eigent-main/: .gitignore  README.md  README_CN.md  electron-builder.json
eigent-main/.github/ISSUE_TEMPLATE/: bug_report.yml
eigent-main/.github/workflows/: build-view.yml
eigent-main/backend/app/controller/: model_controller.py  tool_controller.py
eigent-main/backend/app/model/: chat.py
eigent-main/backend/app/service/: chat_service.py  task.py
eigent-main/backend/app/utils/: single_agent_worker.py
eigent-main/backend/app/utils/server/: sync_step.py
eigent-main/backend/app/utils/toolkit/: craw4ai_toolkit.py  hybrid_browser_python_toolkit.py  hybrid_browser_toolkit.py  pyautogui_toolkit.py  (+1 more)
eigent-main/electron/main/: install-deps.ts  update.ts
eigent-main/resources/scripts/: download.js
eigent-main/server/: .env.example  main.py  pyproject.toml
eigent-main/server/app/type/: config_group.py  model_providers.py  model_type.py
eigent-main/src/components/AddWorker/: ToolSelect.tsx  index.tsx
eigent-main/src/components/ChatBox/: ProjectSection.tsx  UserQueryGroup.tsx  index.tsx
eigent-main/src/components/Folder/: FolderComponent.tsx  index.tsx
eigent-main/src/components/IntegrationList/: index.tsx
eigent-main/src/components/SearchAgentWrokSpace/: index.tsx
eigent-main/src/components/TerminalAgentWrokSpace/: index.tsx
eigent-main/src/components/WorkFlow/: index.tsx  node.tsx
eigent-main/src/components/WorkSpaceMenu/: index.tsx
eigent-main/src/components/update/: index.tsx
eigent-main/src/pages/: Home.tsx  Login.tsx
eigent-main/src/pages/Dashboard/: Project.tsx
eigent-main/src/pages/Setting/: Models.tsx
eigent-main/src/store/: authStore.ts  chatStore.ts
eigent-main/src/types/: chatbox.d.ts
eigent-main/test/: setup.ts
eigent-main/test/mocks/: sse.mock.ts
eigent-main/test/unit/components/: ChatBox.test.tsx
postiz-app-main/postiz-app-main/: package.json  pnpm-lock.yaml
prisma/: schema.prisma
server/: agi-open-routes.ts  copilotkit-routes.ts  index.ts
server/middleware/: enforce-copilotkit.ts
server/services/: agi-open.ts
src/: App.tsx
src/components/: PauliFooter.tsx  PauliHero.tsx  PricingCard.tsx
src/hooks/: useScrollFX.tsx
src/integrations/a2ui/: A2UIChat.tsx  index.ts  theme.ts
src/integrations/copilotkit/: CopilotKitProvider.tsx  index.ts
src/lib/: database.types.ts
src/pages/: A2UIDemo.tsx  Dashboard.tsx  Index.tsx
src/styles/: pauli-styles.ts
supabase/: config.toml
supabase/migrations/: 20251230000001_initial_schema.sql
(+48 files in other folders)
